chore: remove resize directive, implemented ngSrc in other components, and general fixes

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -468,7 +468,8 @@
       "UNKNOWN": "Unknown error",
       "DISABLED_USER": "User has been disabled"
     },
-    "SUCCESS": "Welcome to IEEE!"
+    "SUCCESS": "Welcome to IEEE!",
+    "PAGETITLE": "Log in to IEEE"
   },
   "REGISTER": {
     "TITLE": "Register",
