--- a/src/assets/i18n/es.json
+++ b/src/assets/i18n/es.json
@@ -519,6 +519,7 @@
       "UNKNOWN": "Error desconocido",
       "DISABLED_USER": "Usuario ha sido deshabilitado"
     },
+    "PAGETITLE": "Iniciar Sesión",
     "SUCCESS": "Bienvenido a IEEE!"
   },
   "REGISTER": {
