chore: remove resize directive, implemented ngSrc in other components… (#51)
* chore: remove resize directive, implemented ngSrc in other components, and general fixes

* chore(invidivual-card): changed image size

---------

Co-authored-by: Fegrant <nicolasbirsa333@gmail.com>

--- a/src/assets/i18n/es.json
+++ b/src/assets/i18n/es.json
@@ -520,6 +520,7 @@
       "UNKNOWN": "Error desconocido",
       "DISABLED_USER": "Usuario ha sido deshabilitado"
     },
+    "PAGETITLE": "Iniciar Sesión",
     "SUCCESS": "Bienvenido a IEEE!"
   },
   "REGISTER": {
