chore: load team information to db

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -44,8 +44,8 @@
         "CCA": "Content Creator",
         "DESIGNER": "Designer",
         "WEBMASTER": "General Webmaster & Editor",
-        "WRITER": "Writer",
-        "WRITERA": "Writer",
+        "WRITER-MASC": "Writer",
+        "WRITER-FEM": "Writer",
         "REDACTOR": "Writer",
         "ILLUSTRATOR": "Illustrator",
         "DESIGNERANDILLUSTRATOR": "Designer and Illustrator",
