--- a/src/assets/i18n/es.json
+++ b/src/assets/i18n/es.json
@@ -45,8 +45,8 @@
         "CCA": "Creadora de Contenido",
         "DESIGNER": "Diseñador",
         "WEBMASTER": "Webmaster & Editor General",
-        "WRITER": "Redactor",
-        "WRITERA": "Redactora",
+        "WRITER-MASC": "Redactor",
+        "WRITER-FEM": "Redactora",
         "REDACTOR": "Redactor",
         "ILLUSTRATOR": "Dibujante",
         "DESIGNERANDILLUSTRATOR": "Dibujante y Diseñador",
