--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -716,7 +716,7 @@
     "D_AND_L": {
       "TEXT_1": "The competition will take place at the ",
       "TEXT_2": " (Lavardén 315, CABA, Argentina) on Saturday, July 29.",
-      "DATE": "Saturday, July 29",
+      "DATE": "Saturday, August 3rd",
       "LOCATION": "ITBA Sede Distrito Tecnológico",
       "LOCATION_ADDRESS": "Lavardén 315, CABA, Argentina",
       "TIME": "9:00hs - 19:00hs"
