--- a/src/assets/i18n/es.json
+++ b/src/assets/i18n/es.json
@@ -772,7 +772,7 @@
     "D_AND_L": {
       "TEXT_1": "La competencia se desarrollará en la ",
       "TEXT_2": " (Lavardén 315, CABA, Argentina) el día Sábado 29 de Julio.",
-      "DATE": "Sábado 29 de Julio",
+      "DATE": "Sábado 3 de Agosto",
       "LOCATION": "ITBA Sede Distrito Tecnológico",
       "LOCATION_ADDRESS": "Lavardén 315, CABA, Argentina",
       "TIME": "9:00hs - 19:00hs"
