--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -187,7 +187,16 @@
     "EVENTS": {
       "TITLE": "Events",
       "CONTENT": "Find out about our newest events!",
-      "MORE": "View more events"
+      "MORE": "View more events",
+      "INITIAL_DATE": "Initial date",
+      "EDIT": {
+          "TITLE": "Edit Event",
+          "CANCEL": "Cancel",
+          "SAVE": "Save",
+          "ERROR": {
+              "SAVE": "An error occurred while updating the event"
+          }
+      }
     },
     "CHAPTERS": {
       "TITLE": "Student Chapters",
