chore: refactor edit event form
Use ReactiveForm with validations

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -194,7 +194,10 @@
           "CANCEL": "Cancel",
           "SAVE": "Save",
           "ERROR": {
-              "SAVE": "An error occurred while updating the event"
+              "SAVE": "An error occurred while updating the event",
+              "DATE_REQUIRED": "The date is required",
+              "DATE_INVALID": "The date format is invalid, it should be dd/mm/yyyy",
+              "DATE_PAST": "The date cannot be in the past"
           }
       }
     },
