--- a/src/assets/i18n/es.json
+++ b/src/assets/i18n/es.json
@@ -250,7 +250,10 @@
          "CANCEL": "Cancelar",
          "SAVE": "Guardar",
          "ERROR": {
-            "SAVE": "Ocurrió un error al actualizar el evento"
+             "SAVE": "Ocurrió un error al actualizar el evento",
+             "DATE_REQUIRED": "La fecha es requerida",
+             "DATE_INVALID": "El formato de la fecha es inválido, debe ser dd/mm/yyyy",
+             "DATE_PAST": "La fecha no puede ser en el pasado"
          }
       }
     },
