feat: edit events (#70)
* feat: add events collection name

* feat: create ieee event enum

* feat: add id and isRasEvent fields to EventCardData interface

* chore: refactor existing event service methods to return observables

* chore: refactor IeeeEvent as enum

* chore: refactor EventService usage (handle its methods as observables)

* fix: Use Subject instead of BehaviourSubject to notify only when data is fetched

* style: change loading-spinner color if it's used in ras page

* feat: show loadingSpinner while events are being fetched

* chore: add error handling

* feat: create event editor components (button and modal)

* feat: add event editor to data-analysis event

* chore: create FloatingButtonComponent and refactor EventEditorButtonComponent

* chore: refactor edit event form

Use ReactiveForm with validations

* chore: improve modal style

* feat: add event editor button to the rest of the events' pages

* chore: only allow admin users to edit events

* fix: fix updateEvent method

* chore: remove commented code

* fix: use declarative isAdmin$

---------

Co-authored-by: Federico Shih <fshih@itba.edu.ar>

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -187,7 +187,19 @@
     "EVENTS": {
       "TITLE": "Events",
       "CONTENT": "Find out about our newest events!",
-      "MORE": "View more events"
+      "MORE": "View more events",
+      "INITIAL_DATE": "Initial date",
+      "EDIT": {
+          "TITLE": "Edit Event",
+          "CANCEL": "Cancel",
+          "UPDATE": "Update",
+          "ERROR": {
+              "UPDATE": "An error occurred while updating the event",
+              "DATE_REQUIRED": "The date is required",
+              "DATE_INVALID": "The date format is invalid, it should be dd/mm/yyyy",
+              "DATE_PAST": "The date cannot be in the past"
+          }
+      }
     },
     "CHAPTERS": {
       "TITLE": "Student Chapters",
