--- a/src/assets/i18n/es.json
+++ b/src/assets/i18n/es.json
@@ -243,7 +243,19 @@
     "EVENTS": {
       "TITLE": "Eventos",
       "CONTENT": "¡Entérate de nuestros próximos eventos!",
-      "MORE": "Ver más eventos"
+      "MORE": "Ver más eventos",
+      "INITIAL_DATE": "Fecha de inicio",
+      "EDIT": {
+         "TITLE": "Editar evento",
+         "CANCEL": "Cancelar",
+         "UPDATE": "Actualizar",
+         "ERROR": {
+             "UPDATE": "Ocurrió un error al actualizar el evento",
+             "DATE_REQUIRED": "La fecha es requerida",
+             "DATE_INVALID": "El formato de la fecha es inválido, debe ser dd/mm/yyyy",
+             "DATE_PAST": "La fecha no puede ser en el pasado"
+         }
+      }
     },
     "SPONSORS": "Auspiciantes",
     "CLASSES": {
