--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -189,6 +189,7 @@
       "CONTENT": "Find out about our newest events!",
       "MORE": "View more events",
       "INITIAL_DATE": "Initial date",
+      "UNSCHEDULED": "To be defined",
       "EDIT": {
           "TITLE": "Edit Event",
           "CANCEL": "Cancel",
