--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -188,8 +188,24 @@
       "TITLE": "Events",
       "CONTENT": "Find out about our newest events!",
       "MORE": "View more events",
-      "INITIAL_DATE": "Initial date",
-      "UNSCHEDULED": "To be defined",
+      "DATE": {
+          "TITLE": "Date",
+          "OPENING": "Opening date"
+      },
+      "MONTH": {
+            "TITLE": "Month",
+            "PLACEHOLDER": "Select a month"
+      },
+      "YEAR": {
+            "TITLE": "Year"
+      },
+      "STATUS": {
+          "TITLE": "Status",
+          "UNSCHEDULED": "To be defined",
+          "UPCOMING": "Upcoming",
+          "TENTATIVE": "Tentative",
+          "CONFIRMED": "Confirmed"
+       },
       "EDIT": {
           "TITLE": "Edit Event",
           "CANCEL": "Cancel",
@@ -198,7 +214,13 @@
               "UPDATE": "An error occurred while updating the event",
               "DATE_REQUIRED": "The date is required",
               "DATE_INVALID": "The date format is invalid, it should be dd/mm/yyyy",
-              "DATE_PAST": "The date cannot be in the past"
+              "DATE_PAST": "The date cannot be in the past",
+              "MONTH_REQUIRED": "The month is required",
+              "MONTH_INVALID": "The month is invalid",
+              "MONTH_PAST": "The month cannot be previous to the current month",
+              "YEAR_REQUIRED": "The year is required",
+              "YEAR_INVALID": "The year is invalid",
+              "YEAR_PAST": "The year cannot be previous to the current year"
           }
       }
     },
@@ -984,5 +1006,19 @@
   },
   "CS": {
     "ABOUT": "A technology-focused organization made up of students and alumni of ITBA, dedicated to inspiring and educating in various areas of technology related to software engineering and technology."
-  }
+  },
+  "MONTH": {
+    "0": "January",
+    "1": "February",
+    "2": "March",
+    "3": "April",
+    "4": "May",
+    "5": "June",
+    "6": "July",
+    "7": "August",
+    "8": "September",
+    "9": "October",
+    "10": "November",
+    "11": "December"
+    }
 }
