--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -339,7 +339,8 @@
     "NEWS": "News",
     "SPONSORS": "Sponsors",
     "WRITENEWS": "Create News",
-    "INSTITUTIONAL": "Institutional"
+    "INSTITUTIONAL": "Institutional",
+    "ADMIN": "Admin panel"
   },
     "FOOTER": {
         "ABOUTUS": "About us",
@@ -985,5 +986,26 @@
   },
   "CS": {
     "ABOUT": "A technology-focused organization made up of students and alumni of ITBA, dedicated to inspiring and educating in various areas of technology related to software engineering and technology."
+  },
+  "ADMIN": {
+    "TITLE": "Admin panel",
+    "USERTAB": {
+      "TITLE": "Users",
+      "TABLE": {
+        "FNAME": "First Name",
+        "LNAME": "Last Name",
+        "EMAIL": "Email",
+        "ROLE": "Role"
+      },
+      "SEARCHBAR": "Search user by email",
+      "ERRORS": {
+        "NO_CHANGES": "There are no changes to save",
+        "CANNOT_CHANGE_EMAIL": "It is not possible to change the user's email"
+      },
+      "ROLES": {
+        "ADMIN": "Admin",
+        "WRITER": "Writer"
+      }
+    }
   }
 }
