feature: add new event dates to form (WIP)

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -190,7 +190,9 @@
       "MORE": "View more events",
       "DATE": {
           "TITLE": "Date",
-          "OPENING": "Opening date"
+          "OPENING": "Opening date",
+          "INSCRIPTION": "Inscription date",
+          "FINISH": "Finish date"
       },
       "MONTH": {
             "TITLE": "Month",
