--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -188,7 +188,36 @@
       "TITLE": "Events",
       "CONTENT": "Find out about our newest events!",
       "MORE": "View more events",
-      "INITIAL_DATE": "Initial date",
+      "DATE": {
+          "TITLE": "Date",
+          "OPENING": "Opening date"
+      },
+      "MONTH": {
+            "TITLE": "Month",
+            "PLACEHOLDER": "Select a month"
+      },
+      "YEAR": {
+            "TITLE": "Year"
+      },
+      "STATUS": {
+          "TITLE": "Status",
+          "UNSCHEDULED": {
+              "TITLE": "To be defined",
+              "DESCRIPTION": "It is not planned to take place during the year"
+          },
+          "UPCOMING": {
+              "TITLE": "Upcoming",
+              "DESCRIPTION": "It will take place during the year"
+          },
+          "TENTATIVE": {
+              "TITLE": "Tentative",
+              "DESCRIPTION": "It will take place in a certain month of the current year"
+          },
+          "CONFIRMED": {
+                "TITLE": "Confirmed",
+                "DESCRIPTION": "It has a defined date"
+          }
+       },
       "EDIT": {
           "TITLE": "Edit Event",
           "CANCEL": "Cancel",
@@ -197,7 +226,13 @@
               "UPDATE": "An error occurred while updating the event",
               "DATE_REQUIRED": "The date is required",
               "DATE_INVALID": "The date format is invalid, it should be dd/mm/yyyy",
-              "DATE_PAST": "The date cannot be in the past"
+              "DATE_PAST": "The date cannot be in the past",
+              "MONTH_REQUIRED": "The month is required",
+              "MONTH_INVALID": "The month is invalid",
+              "MONTH_PAST": "The month cannot be previous to the current month",
+              "YEAR_REQUIRED": "The year is required",
+              "YEAR_INVALID": "The year is invalid",
+              "YEAR_PAST": "The year cannot be previous to the current year"
           }
       }
     },
@@ -1007,5 +1042,19 @@
         "WRITER": "Writer"
       }
     }
-  }
+  },
+  "MONTH": {
+    "0": "January",
+    "1": "February",
+    "2": "March",
+    "3": "April",
+    "4": "May",
+    "5": "June",
+    "6": "July",
+    "7": "August",
+    "8": "September",
+    "9": "October",
+    "10": "November",
+    "11": "December"
+    }
 }
