feat: add dates information to event pages

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -188,7 +188,10 @@
       "TITLE": "Events",
       "CONTENT": "Find out about our newest events!",
       "MORE": "View more events",
+      "EVENT": "Event",
+      "INSCRIPTION": "Inscription",
       "DATE": {
+          "TITLE": "Dates",
           "UNIQUE": "Date",
           "FIRST": "First date",
           "EVENT": "Event date",
