feat: add migrate util, hide dates when not confirmed, create format date pipe for modularization

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -227,7 +227,9 @@
           },
           "CONFIRMED": {
                 "TITLE": "Confirmed",
-                "DESCRIPTION": "It has a defined date"
+                "DESCRIPTION": "It has a defined date",
+              "FINISHED_INSCRIPTION": "Closed",
+              "FINISHED_EVENT": "Ended"
           }
        },
       "EDIT": {
