--- a/src/assets/i18n/es.json
+++ b/src/assets/i18n/es.json
@@ -282,8 +282,10 @@
                 "DESCRIPTION": "Se realizará en cierto mes del año actual"
           },
           "CONFIRMED": {
-                "TITLE": "Confirmado",
-                "DESCRIPTION": "Se tiene fecha definida"
+              "TITLE": "Confirmado",
+              "DESCRIPTION": "Tiene definido una fecha",
+              "FINISHED_INSCRIPTION": "Cerradas",
+              "FINISHED_EVENT": "Finalizado"
           }
       },
       "EDIT": {
