feat: new event dates
- Add inscription event
- Add period for event and inscription
- Mobile style changes
- Edit inscription and event form

* chore: refactor EventCard interface and rename it to Event

* chore: update Event interface usage

* chore: move isCurrentUserAdmin method to UserService

* chore: refactor EventService

* fix: the current event date is the opening date, not the inscription

* fix: fix EventService

* fix: update EventCardShortComponent

* feat: update EventEditorModalComponent (WIP)

* feat: add tooltip to status options

* feat: improve status radio buttons style

* feat: form validations & error display

* chore: move event editor form to its own class, EventEditorForm

* style: set event status options color according to current app colors

* chore: create script to migrate events' date

* chore: add new event dates (inscription & finish)

* chore: update getUpcomingEvents method

* chore: create update to add new dates to all events

* feature: add new event dates to form (WIP)

* chore: refactor event dates schema
Opening is renamed to Event and now CONFIRMED dates can have a lastDate if it's a period

* feat: add icon to EventCardShortComponent

* chore: update event editor form

* chore: improve form error display

* chore: fix event service method signature

* chore: show errors and submit only if form changed

* chore: emit update to event pages

* fix: parse month and year form inputs to integer

* feat: add dates information to event pages

* chore: move dates event section below the description

* feat: add date chips to events title

* style: change styles for mobile devices

* feat: add migrate util, hide dates when not confirmed, create format date pipe for modularization

---------

Co-authored-by: Federico Shih <fedeshih@gmail.com>

--- a/src/assets/i18n/es.json
+++ b/src/assets/i18n/es.json
@@ -244,9 +244,21 @@
       "TITLE": "Eventos",
       "CONTENT": "¡Entérate de nuestros próximos eventos!",
       "MORE": "Ver más eventos",
+      "EVENT": "Evento",
+      "INSCRIPTION": "Inscripción",
       "DATE": {
-         "TITLE": "Fecha",
-         "OPENING": "Fecha de apertura"
+         "TITLE": "Fechas",
+         "UNIQUE": "Fecha",
+         "FIRST": "Primera fecha",
+         "EVENT": "Fecha del evento",
+         "INSCRIPTION": "Fecha de inscripción",
+         "FINISH": "Fecha de cierre"
+      },
+      "IS_PERIOD": {
+          "TITLE": "¿Es un periodo?"
+      },
+      "LAST_DATE": {
+          "TITLE": "Última fecha"
       },
       "MONTH": {
           "TITLE": "Mes",
@@ -270,8 +282,10 @@
                 "DESCRIPTION": "Se realizará en cierto mes del año actual"
           },
           "CONFIRMED": {
-                "TITLE": "Confirmado",
-                "DESCRIPTION": "Se tiene fecha definida"
+              "TITLE": "Confirmado",
+              "DESCRIPTION": "Tiene definido una fecha",
+              "FINISHED_INSCRIPTION": "Cerradas",
+              "FINISHED_EVENT": "Finalizado"
           }
       },
       "EDIT": {
@@ -283,6 +297,10 @@
              "DATE_REQUIRED": "La fecha es requerida",
              "DATE_INVALID": "El formato de la fecha es inválido, debe ser dd/mm/yyyy",
              "DATE_PAST": "La fecha no puede ser en el pasado",
+             "LAST_DATE_REQUIRED": "La última fecha es requerida",
+             "LAST_DATE_INVALID": "El formato de la última fecha es inválido, debe ser dd/mm/yyyy",
+             "LAST_DATE_PAST": "La última fecha no puede ser en el pasado",
+             "LAST_DATE_BEFORE_DATE": "La última fecha debe ser posterior a la fecha de apertura",
              "MONTH_REQUIRED": "El mes es requerido",
              "MONTH_INVALID": "El mes es inválido",
              "MONTH_PAST": "El mes no puede ser anterior al mes actual",
@@ -411,8 +429,8 @@
     }
   },
   "BITCUP": {
-    "BITCUP-TITLE": "¡Bit cup!",
-    "BITCUP-TEXT": "La Bit Cup es una competencia de programación abierta y gratuita organizada por IEEE ITBA en la que los participantes se proponen resolver distintos desafíos en un límite de tiempo ¡Podés aprovechar para practicar para la IEEEXtreme y conocer el mundo de la programación competitiva!",
+    "DESCRIPTION": "Descripción",
+    "DESCRIPTION-TEXT": "La Bit Cup es una competencia de programación abierta y gratuita organizada por IEEE ITBA en la que los participantes se proponen resolver distintos desafíos en un límite de tiempo ¡Podés aprovechar para practicar para la IEEEXtreme y conocer el mundo de la programación competitiva!",
     "FORMAT": "Formato",
     "FORMAT-TEXT": "La competencia funciona a partir de una serie de problemas a resolver que se van habilitando a lo largo de su desarrollo. Se evalúa a partir de un set de casos de prueba tal que mientras más superes, más puntos sumás. Se deberá tener en cuenta los límites en cuanto a memoria y tiempo de procesamiento.",
     "LEVEL": "¿Nivel?",
