--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -188,9 +188,21 @@
       "TITLE": "Events",
       "CONTENT": "Find out about our newest events!",
       "MORE": "View more events",
+      "EVENT": "Event",
+      "INSCRIPTION": "Inscription",
       "DATE": {
-          "TITLE": "Date",
-          "OPENING": "Opening date"
+          "TITLE": "Dates",
+          "UNIQUE": "Date",
+          "FIRST": "First date",
+          "EVENT": "Event date",
+          "INSCRIPTION": "Inscription date",
+          "FINISH": "Finish date"
+      },
+      "IS_PERIOD": {
+          "TITLE": "Is it a period?"
+      },
+      "LAST_DATE": {
+          "TITLE": "Last date"
       },
       "MONTH": {
             "TITLE": "Month",
@@ -215,7 +227,9 @@
           },
           "CONFIRMED": {
                 "TITLE": "Confirmed",
-                "DESCRIPTION": "It has a defined date"
+                "DESCRIPTION": "It has a defined date",
+              "FINISHED_INSCRIPTION": "Closed",
+              "FINISHED_EVENT": "Ended"
           }
        },
       "EDIT": {
@@ -227,6 +241,10 @@
               "DATE_REQUIRED": "The date is required",
               "DATE_INVALID": "The date format is invalid, it should be dd/mm/yyyy",
               "DATE_PAST": "The date cannot be in the past",
+              "LAST_DATE_REQUIRED": "The last date is required",
+              "LAST_DATE_INVALID": "The last date format is invalid, it should be dd/mm/yyyy",
+              "LAST_DATE_PAST": "The last date cannot be in the past",
+              "LAST_DATE_BEFORE_DATE": "The last date must be after the first date",
               "MONTH_REQUIRED": "The month is required",
               "MONTH_INVALID": "The month is invalid",
               "MONTH_PAST": "The month cannot be previous to the current month",
@@ -355,8 +373,8 @@
     }
   },
   "BITCUP": {
-    "BITCUP-TITLE": "Bit cup!",
-    "BITCUP-TEXT": "The Bit Cup is an open and free programming competition organized by IEEE ITBA where participants attempt to solve several challenges within a limited time. You can use it as practice for the IEEEXtreme and enter the world of competitive programming!",
+    "DESCRIPTION": "Description",
+    "DESCRIPTION-TEXT": "The Bit Cup is an open and free programming competition organized by IEEE ITBA where participants attempt to solve several challenges within a limited time. You can use it as practice for the IEEEXtreme and enter the world of competitive programming!",
     "FORMAT": "Format",
     "FORMAT-TEXT": "This competition consists of solving a series of challenges released as the competition develops. It is graded from a set of test cases so that your score increases as you pass more test cases. Memory limits and processing time will need to be taken into account.",
     "LEVEL": "¿Level?",
