feat: add inscription link button

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -190,6 +190,10 @@
       "MORE": "View more events",
       "EVENT": "Event",
       "INSCRIPTION": "Inscription",
+      "ENROLL": {
+         "OPEN": "Sign up!",
+         "CLOSED": "Inscriptions closed"
+      },
       "DATE": {
           "TITLE": "Dates",
           "UNIQUE": "Date",
