--- a/src/assets/i18n/es.json
+++ b/src/assets/i18n/es.json
@@ -246,6 +246,10 @@
       "MORE": "Ver más eventos",
       "EVENT": "Evento",
       "INSCRIPTION": "Inscripción",
+      "ENROLL": {
+        "OPEN": "¡Inscribite!",
+        "CLOSED": "Inscripciones cerradas"
+      },
       "DATE": {
          "TITLE": "Fechas",
          "UNIQUE": "Fecha",
