chore: create app-event-inscription-section component

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -191,8 +191,8 @@
       "EVENT": "Event",
       "INSCRIPTION": "Inscription",
       "ENROLL": {
-         "OPEN": "Sign up!",
-         "CLOSED": "Inscriptions closed"
+        "OPEN": "Inscriptions are open!",
+        "CLICK": "Enroll now!"
       },
       "DATE": {
           "TITLE": "Dates",
